@@ -4,6 +4,10 @@ Changes in 3.1.9
 * NEW: afpd: new options "force user" and "force group"
 * FIX: listening on IPv6 wildcard address may fail if IPv6 is
        disabled, bug #606
+* UPD: configure option "--with-init-style=" for Gentoo.
+       "gentoo" is renamed to "gentoo-openrc".
+       "gentoo-openrc" is same as "openrc".
+       "gentoo-systemd" is same as "systemd".
 
 Changes in 3.1.8
 ================
